--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -21,7 +21,6 @@
   keywords = {Code refactoring, Composite refactoring, Software maintenance, Software project, Systematic mapping},
   abstract = {Context: code refactoring is a code transformation that aims to improve software quality. A composite refactoring (or, simply, composite) is defined by two or more interrelated refactorings, which is often applied by developers. Each composite needs to be somehow represented and has its own characteristics (e.g., code scope) as well as its effects on software quality. However, these basic elements of composites are rarely studied systematically. The lack of systematic knowledge also misguides the design of automated support tools for supporting composite refactoring. Thus, researchers might have controversial views about basic elements of composite refactorings. An example of these literature conflicts concerns the effect of composites: while some studies suggest composites more often remove code smells, other studies indicate composites often introduce code smells. Objective: in this sense, our study aims at analyzing the technical literature of composite refactoring and building a conceptual framework of the representation models, characteristics, and the effect of composite refactoring. Method: we conducted a systematic mapping with 140 primary empirical studies about refactoring. Our systematic mapping summarizes the current knowledge on composites and also presents a conceptual framework intended to characterize composite refactoring. Results: our conceptual framework presents seven representation models, nine characteristics, and thirteen effects of composites. We found out that studies used multidimensional representations, like graphs, to determine what refactoring(s) may be suggested and combined. On composite characteristics, studies mentioned developers often finish a composite in up to a month. However, these studies do not detail why and when composites span for several weeks. Then, we discussed other existing gaps on the current literature of composites. For instance, while most of the studies report the effect of composites on internal software quality, e.g., code smells, their effect on external software quality is little explored. Conclusion: our results can motivate future studies to more deeply investigate composite refactoring applications, and the improvement of tooling support for composite refactorings.}
 }
-
 @article{ALMEIDA2023107142,
   title = {Negative effects of gamification in education software: Systematic mapping and practitioner perceptions},
   journal = {Information and Software Technology},
@@ -40,7 +39,7 @@
   author = {R. de Mello and R. Oliveira and A. Uchôa and W. Oizumi and A. Garcia and B. Fonseca and F. de Mello},
   journal = {IEEE Software},
   title = {Recommendations for Developers Identifying Code Smells},
-  year = {2022},
+  year = {2023},
   volume = {40},
   number = {02},
   issn = {1937-4194},
@@ -48,6 +47,7 @@
   abstract = {Identifying code smells is a widely disseminated practice for preventing software systems from design problems and other maintainability issues. This task remains challenging and manual despite several catalogues and detection tools being available. The complexity involved in identifying a code smell requires the developer’s ability to analyse its surrounding context, reflecting on its actual incidence and need for removal. Despite the predominantly manual nature of the task, there is still quite limited knowledge of the human and social aspects involved. In this sense, we conducted several investigations centred on the community of software developers in recent years. The outcomes of this work provide a comprehensive view of the task and emerging findings, such as the developers’ major beliefs, values, and ideas about identifying code smells. Based on these outcomes, we present practical recommendations to developers to optimise efforts in identifying code smells.},
   keywords = {codes;software;task analysis;software systems;frequency measurement;psychology;complexity theory},
   doi = {10.1109/MS.2022.3203716},
+  url = {https://ieeexplore.ieee.org/document/9904005},
   publisher = {IEEE Computer Society},
   address = {Los Alamitos, CA, USA},
   month = {mar}
