--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,12 @@
+@inproceedings{barbosa2023beyond,
+  title={Beyond the Code: Investigating the Effects of Pull Request Conversations on Design Decay},
+  author={Caio Barbosa and Anderson Uchôa and Daniel Coutinho and Wesley K. G. Assunção and Anderson Oliveira and Alessandro Garcia and Baldoino Fonseca and Matheus Feitosa de Oliveira Rabelo and José Eric Mesquita Coelho and Eryka Carvalho da Silva and Paulo Henrique Santos Marques},
+  booktitle={Proceedings of the 17th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM), 2023, New Orleans, USA, 23-27 October 2023},
+  pages={1--12},
+  year={2023},
+  abstract={Background: Code development is done collaboratively and supported by platforms, such as GitHub and GitLab. These platforms contribute to collaborative software development, offering a pull-based development model. In this model, developers actively communicate and share their knowledge through conversations. However, pull request conversations are affected by several social aspects, such as communication dynamics among developers, discussion content, and organizational dynamics, which may directly impact the quality of the software. Despite prior studies indicating that social aspects indeed impact software quality, it is still unknown to what extent social aspects influence design decay during software development. Thus, since social aspects are intertwined with design and implementation decisions, there is a need for investigating how social aspects contribute to avoiding, reducing, or accelerating design decay. Aims: To fill this gap, we performed a study aimed at investigating the effects of pull request conversation on design decay. Method: We investigated 10,746 pull request conversations from 11 open-source systems. The pull request conversations were characterized in terms of three different social aspects: discussion content, organizational and communication dynamics. We observed and characterized 18 social metrics to these three social aspects, and analyzed how they associate with design decay. To this end, we used a statistical approach to assess which social metrics are able to discriminate between impactful and unimpactful pull requests. Then, we employed a multiple logistic regression model to evaluate the influence of each social metric per social aspect in the presence of each other on design decay. Finally, we also observed how the combination of all social metrics influences the design decay. Results: Our findings reveal that social metrics related to the size and duration of a discussion, the presence of design-related keywords, the team size, and gender diversity can be used to discriminate between design impactful and unimpactful pull requests. Second, organizational growth and gender diversity prevent decay. Third, each software community has its unique set of social aspects that can be used to detect and prevent design decay. Finally, design improvements can be accomplished by timely feedback, engaged communication, and design-oriented discussions with the contribution of multiple participants who provide significant comments. Conclusion: The social aspects related to pull request conversations are useful indicators of design decay.},
+}
+
 @inproceedings{oliveira2023dont,
   title={Don't Forget the Exception! Considering Robustness Changes to Identify Design Problems},
   author={Anderson Oliveira and João Lucas Correia and Leonardo Sousa and Wesley K. G. Assunção and Daniel Coutinho and Alessandro Garcia and Willian Oizumi and Caio Barbosa and Anderson Uchôa and Juliana Alves Pereira},
