--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -5,6 +5,8 @@
   pages={1--6},
   year={2023},
   abstract={Context: Refactorings are actions developers do not often do in a standard way. One of the reasons is the lack of visualizations in current tools capable of identifying refactorings. Code visualizations can help developers make decisions about analyzing code quality and possible code refactorings. Objective: We present CIRef, a tool for visualizing the historical data of refactorings in Java projects. For a particular project, CIRef provides a wide range of visualizations including customizable rankings of the importance of different refactoring types, duels between developers to understand their profiles, and a timeline of the number of refactorings performed. Method: To validate the acceptance and perceived usefulness of CIRef, we conducted a study with eight developers using the Technology Acceptance Model (TAM). Results: The results indicate that 75% of the participants agreed with using the tool in the future and found it easy to use. Conclusions: Despite supporting developers in visualizing historical refactoring data, CIRef also has the potential for educational purposes. It can help teachers visualize the history of refactorings performed by students, especially in educational environments focused on programming and maintaining Java projects. Video link: https://figshare.com/s/99c9e2ca3fb227b649a1.},
+  url = {https://anderson-uchoa.github.io/publications/marcos2023ciref.pdf},
+
 }
 
 @inproceedings{barbosa2023beyond,
@@ -14,6 +16,8 @@
   pages={1--12},
   year={2023},
   abstract={Background: Code development is done collaboratively and supported by platforms, such as GitHub and GitLab. These platforms contribute to collaborative software development, offering a pull-based development model. In this model, developers actively communicate and share their knowledge through conversations. However, pull request conversations are affected by several social aspects, such as communication dynamics among developers, discussion content, and organizational dynamics, which may directly impact the quality of the software. Despite prior studies indicating that social aspects indeed impact software quality, it is still unknown to what extent social aspects influence design decay during software development. Thus, since social aspects are intertwined with design and implementation decisions, there is a need for investigating how social aspects contribute to avoiding, reducing, or accelerating design decay. Aims: To fill this gap, we performed a study aimed at investigating the effects of pull request conversation on design decay. Method: We investigated 10,746 pull request conversations from 11 open-source systems. The pull request conversations were characterized in terms of three different social aspects: discussion content, organizational and communication dynamics. We observed and characterized 18 social metrics to these three social aspects, and analyzed how they associate with design decay. To this end, we used a statistical approach to assess which social metrics are able to discriminate between impactful and unimpactful pull requests. Then, we employed a multiple logistic regression model to evaluate the influence of each social metric per social aspect in the presence of each other on design decay. Finally, we also observed how the combination of all social metrics influences the design decay. Results: Our findings reveal that social metrics related to the size and duration of a discussion, the presence of design-related keywords, the team size, and gender diversity can be used to discriminate between design impactful and unimpactful pull requests. Second, organizational growth and gender diversity prevent decay. Third, each software community has its unique set of social aspects that can be used to detect and prevent design decay. Finally, design improvements can be accomplished by timely feedback, engaged communication, and design-oriented discussions with the contribution of multiple participants who provide significant comments. Conclusion: The social aspects related to pull request conversations are useful indicators of design decay.},
+  url = {https://anderson-uchoa.github.io/publications/barbosa2023beyond.pdf},
+
 }
 
 @inproceedings{oliveira2023dont,
@@ -22,6 +26,7 @@
   booktitle={Proceedings of the 20th International Conference on Mining Software Repositories (MSR), 2023, Melbourne, Australia, 15-16 May 2023},
   pages={1--12},
   year={2023},
+  doi = {10.1109/MSR59073.2023.00064},
   abstract={Modern programming languages, such as Java, use exception-handling mechanisms to guarantee the robustness of software systems. Although important, the quality of exception code is usually poor and neglected by developers. Indiscriminate robustness changes (e.g., the addition of empty catch blocks) can indicate design decisions that negatively impact the internal quality of software systems. As it is known in the literature, multiple occurrences of poor code structures, namely code smells, are strong indicators of design problems. Still, existing studies focus mainly on the correlation of maintainability smells with design problems. However, using only these smells may not be enough since developers need more context (e.g., system domain) to identify the problems in certain scenarios. Moreover, these studies do not explore how changes in the exceptional code of the methods combined with maintainability smells can give complementary evidence of design problems. By covering both regular and exception codes, the developer can have more context about the system and find complementary code smells that reinforce the presence of design problems. This work aims to leverage the identification of design problems by tracking poor robustness changes combined with maintainability smells. We investigated the correlation between robustness changes and maintainability smells on the commit history of more than 160k methods from different releases of 10 open-source software systems. We observed that maintainability smells can be worsened or even introduced when robustness changes are performed. This scenario mainly happened for the smells Feature Envy, Long Method, and Dispersed Coupling. We also analyzed the co-occurrence between robustness and maintainability smells. We identified that the empty catch block and catch throwable robustness smells were the ones that co-occurred the most with maintainability smells related to the Concern Overload and Misplaced Concern design problems. The contribution of our work is to reveal that poor exception code, usually neglected by developers, negatively impacts the quality of methods and classes, signaled by the maintainability smells. Therefore, existing code smell detecting tools can be enhanced to leverage robustness changes to identify design problems.},
   url = {https://anderson-uchoa.github.io/publications/oliveira2023dont.pdf},
  }
