--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,14 @@
+@inproceedings{ivens2023factors,
+  title={What Factors Affect the Build Failures Correction Time? A Multi-Project Study},
+  author={Gustavo Ivens and Carla Bezerra and Anderson Uchôa and Ivan Machado},
+  booktitle={Proceedings of the 17th Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS), 2023, Campo Grande, MS, Brazil, 25-27 September 2023},
+  pages={1--10},
+  year={2023},
+  abstract={Continuous Integration (CI) is a widely adopted practice in modern software engineering that involves integrating developers' local changes with the project baseline daily. Despite its popularity, recent studies have revealed that integrating changes can be time-consuming, requiring significant effort to correct errors that arise. This can lead to development activities being paused, including the addition of new features and fixing bugs, while developers focus on analyzing and correcting build failures. In this study, we investigate the factors that influence the time taken to correct build failures in CI. Specifically, we analyze the impact of developer activity, project characteristics, and build complexity on build failure correction time. To conduct our analysis, we collected data from 18 industrial projects of a software company, calculating 13 metrics for each project based on the literature on build failures analysis. We used association rules, a data mining technique, to examine the relationship between the defined factors and build failure correction time. Our findings reveal significant correlations between the factors studied and the duration of build failure correction time. Specifically, we found that more experienced developers require less time to correct build failures, while build failures that originate in the early stages of the project are resolved more quickly. Additionally, we observed that build failures with more lines and modified files tend to have longer correction times. Overall, this study sheds light on the factors that impact build failure correction time in CI. By identifying these factors, our findings can help software development teams optimize their CI processes and minimize the impact of build failures on development activities.},
+  url = {https://anderson-uchoa.github.io/publications/ivens2023factors.pdf},
+
+}
+
 @inproceedings{marcos2023ciref,
   title={CIRef: A Tool for Visualizing the Historical Data of Software Refactorings in Java Projects},
   author={Marcos Silva and Maykon Nunes and Carla Bezerra and Anderson Uchôa and Mairieli Wessel},
