--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,14 @@
+@article{uchoa2024towards,
+  title={Towards Effective Gamification of Existing Systems: Method and Experience Report},
+  journal={Software Quality Journal},
+  pages={1:57},
+  year={2024},
+  author={Anderson Uchôa and Rafael de Mello and Jairo Souza and Leopoldo Teixeira and Baldoino Fonseca and Alessandro Garcia},
+  abstract={Context: Gamification promotes user engagement with software features through the incorporation of game elements and rules. Gamification is often incorporated a posteriori into already existing systems. Success in gamifying an existing system depends on careful planning and the evolution of its previously produced software artifacts. This is particularly true for artifacts produced in the earliest development phases, such as the requirements specification. Objective: Incorporating game
+elements and rules into an existing system is far from trivial. Developers eventually struggle with performing certain development activities, such as evolving existing requirements and selecting game elements and game rules. This paper reports our practical experience in gamifying an existing system. Based on this experience, we introduce Gamify4Fun, a method that aims to assist developers in performing some key activities to gamify existing systems. Method: We built Gamify4Fun based on the experience of 15 developers involved with the gamification of an existing healthcare system. We started by adopting an original method aimed at gamifying systems being built from scratch. As we needed to adapt the original method for supporting the particularities of gamifying a previously developed system, we refined the original method's development activities and their respective phases. We also interviewed the developers to capture their perception of challenging development activities through gamification. The interviews' outcomes guided some further refinements to the original method. Results: Gamify4Fun supports the gamification of existing systems at the earliest development phases: from the preparation of the system gamification to both the gamification and system design. We refined the development activities of the original method as much as needed; we also used or adapted the activities prescribed by other methods from the literature, in the context of gamification from scratch, to fill gaps whenever necessary. Conclusion: By reporting our practical experience and introducing a gamification method, we expect to guide development teams in gamifying their existing systems, as well as shed insights about the current, unaddressed limitations of existing approaches (including ours) to gamifying existing systems.},
+}
+
+
 @inproceedings{bibano2024enhancing,
   title={Enhancing Recommendations of Composite Refactorings based on the Practice},
   author={Ana Carla Bibiano and Anderson Uchôa and Daniel Tenório and Daniel Coutinho and Wesley K. G. Assunção and Alessandro Garcia and Baldoino Fonseca dos Santos Neto and Márcio Ribeiro and Thelma Colanzi and Audrey Vasconcelos and Rafael de Mello},
