--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,22 @@
+@inproceedings{mesquita2025hello,
+  title={Hello, Freire! How Can You Help Me? A Smart Chatbot to Enhance Access to Academic Opportunities and Institutional Matters},
+  author={Arthur Willame Mesquita and Carlos Freire and Antônio Gomes and Bruna Amazonas and Anderson Uchôa},
+  booktitle={Proceedings of the 21st Brazilian Symposium on Information Systems (SBSI), 2025, Recife, Pernambuco, Brazil, 19-23 May 2025},
+  pages={1--10},
+  year={2025},
+  abstract={Context: Universities offer various resources and services that students often fail to utilize due to difficulties in accessing relevant information. Chatbots can improve access and interaction between students and institutions. Problem: Students struggle to find information about academic opportunities and institutional matters due to fragmented data, limiting engagement. Solution: This paper introduces Freire Assistant (Freire), a chatbot system powered by a Large Language Model (LLM) and built using Retrieval Augmented Generation (RAG) pipelines. Freire aims to streamline access to academic information through a fast, intuitive communication channel. IS theory: This work was developed under the aegis of Soft Systems Theory, as it addresses the complexity of accessing academic information as a sociotechnical problem. Method: To evaluate Freire’s effectiveness in providing accurate and relevant information about academic opportunities and institutional matters, we conducted a case study at a Brazilian university. We quantitatively evaluated the contextual quality of Freire's responses using the DeepEval framework. Additionally, we qualitatively evaluated Freire's usability with 45 students through the Chatbot Usability Questionnaire (CUQ) which measures aspects related to Chatbot Personality, Onboarding, User Experience, and Error Handling. Summary of Results: The findings demonstrated Freire’s efficiency in generating contextually relevant and accurate responses. Furthermore, usability scores were generally high due to their simple interface and conversation-driven functionality. Contributions and Impact in the IS area: This study highlights how smart chatbots can enhance user experience and access to information in universities, providing a replicable model for other institutions facing similar challenges.},
+}
+
+@inproceedings{pereira2025overcoming,
+  title={Overcoming Obstacles: Challenges of Gender Inequality in Undergraduate ICT Programs},
+  author={Angelica Pereira Souza and Anderson Uchôa and Edna Dias Canedo and Juliana Alves Pereira and Claudia Pinto Pereira and Larissa Rocha},
+  booktitle={Proceedings of the 6th ACM/IEEE Workshop on Gender Equality, Diversity, and Inclusion in Software Engineering (GE), 2025, Ottawa, Ontario, Canada, 27-29 April 2025},
+  pages={1--9},
+  year={2025},
+  abstract={Context: Gender inequality is a widely discussed issue across various sectors, including Information Technology and Communication (ICT). In Brazil, women represent less than 18\% of ICT students in higher education. Prior studies highlight gender-related barriers that discourage women from staying in ICT. However, they provide limited insights into their perceptions as undergraduate students and the factors influencing their participation and confidence. Goal: This study explores the perceptions of women undergraduate students in ICT regarding gender inequality. Method: A survey of 402 women from 18 Brazilian states enrolled in ICT courses was conducted using a mixed-method approach, combining quantitative and qualitative analyses. Results: Women students reported experiencing discriminatory practices from peers and professors, both inside and outside the classroom. Gender stereotypes were found to undermine their self-confidence and self-esteem, occasionally leading to course discontinuation. Conclusions: Factors such as lack of representation, inappropriate jokes, isolation, mistrust, and difficulty being heard contribute to harmful outcomes, including reduced participation and reluctance to take leadership roles. Addressing these issues is essential to creating a safe and respectful learning environment for all students.},
+  url = {https://anderson-uchoa.github.io/publications/souza2025overcoming.pdf},
+}
+
 @article{uchoa2024towards,
   title={Towards Effective Gamification of Existing Systems: Method and Experience Report},
   journal={Software Quality Journal},
