--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,21 @@
+@inproceedings{ferreira2025assessing,
+  title={Assessing the Bug-Proneness of Refactored Code: A Longitudinal Multi-Project Study},
+  author={Isabella Ferreira and Lawrence Arkoh and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia and Wesley K. G. Assunção},
+  booktitle={Proceedings of the 29th International Conference on Evaluation and Assessment in Software Engineering (EASE), 2025, Istanbul,Turkey,17-20 June 2025},
+  pages={1--12},
+  year={2025},
+  abstract={Refactoring is a common practice in software development, aimed at improving the internal code structure in order to make it easier to understand and modify. Consequently, it is often assumed that refactoring makes the code less prone to bugs. However, in practice, refactoring is a complex task and applied in different ways (e.g., various refactoring types, single vs. composite refactorings) and with a variety of purposes (e.g., root-canal vs. floss refactoring). Therefore, certain refactorings can inadvertently make the code more prone to bugs. Unfortunately, there is limited research in the literature on the long-term relationship between the different characteristics of refactorings and bugs. This paper presents a longitudinal study of 12 open source software projects, where 27,450 refactorings, 1,033 reported bugs, and 6,219 bugs detected with static analysis tools were analyzed. While our study confirms the common intuition that refactored code is less bug-prone than non-refactored code, we also extend or contradict existing body of knowledge in other ways. First, a code element that undergoes multiple refactorings is not less bug-prone than an element that undergoes a single refactoring. A single refactoring is the one not performed in conjunction with other refactorings in the same commit. Second, single refactorings often induce the occurrence of bugs across all analyzed projects. Third, code elements affected by refactorings made in conjunction with other non-refactoring changes in the same commit (i.e., floss refactorings) are often bug-prone. Finally, many of such bugs induced by refactoring  cannot be revealed with state-of-the-art techniques for detecting behavior-preserving refactorings.},
+}
+
+@inproceedings{soares2025relating,
+  title={Relating Complexity, Explicitness, Effectiveness of Refactorings and Non-Functional Requirements: A Replication Study},
+  author={Vinícius Soares and Lawrence Arkoh and Paulo Roberto Farah and Anderson Uchôa and Alessandro Garcia and Wesley K. G. Assunção},
+  booktitle={Proceedings of the 29th International Conference on Evaluation and Assessment in Software Engineering (EASE), 2025, Istanbul,Turkey,17-20 June 2025},
+  pages={1--12},
+  year={2025},
+  abstract={Refactoring is a practice widely adopted during software maintenance and evolution. Due to its importance, there is extensive work on the effectiveness of refactoring in achieving code quality. However, developer's intentions are usually overlooked. A more recent area of study involves the concept of self-affirmed refactoring (SAR), where developers explicitly state their intent to refactor. While studies on SAR have made valuable contributions, they provide little insights into refactoring complexity and effectiveness, as well as the refactorings' relations to specific non-functional requirements. A study by Soares et al. published in 2020 addressed such aspects, but it relied on a quite small sample of studied subject systems and refactoring instances (in addition to other limitations). Following the empirical method of replication, we expanded the scope of Soares et al.'s study by doubling the number of projects analyzed (eight in total), and a significantly larger set of validated refactorings (8,408). Our findings only partially align with the original study. We observed that when developers explicitly state their refactoring intent, the resulting changes typically involve a combination of different refactoring types, making them more complex. Additionally, we confirmed that such complex refactorings positively impact code's internal quality attributes.  Yet, while refactorings targeting non-functional requirements generally enhance code quality compared to refactorings without this explicit concern, our observations only partially confirm the original study’s conclusions. Furthermore, our results contradict the original study in various aspects. For example, we interestingly found that SARs (compared to non-SARs) tend to produce fewer negative effects on internal quality attributes despite their quite frequent complexity. These findings highlight the need for reducing the complexity of refactorings while maximizing their positive effects. They also underscore the importance of explicitly stating refactoring intentions, as this provides a clear mental framework that guides effective refactoring efforts.},
+}
+
 @inproceedings{mesquita2025hello,
   title={Hello, Freire! How Can You Help Me? A Smart Chatbot to Enhance Access to Academic Opportunities and Institutional Matters},
   author={Arthur Willame Mesquita and Carlos Freire and Antônio Gomes and Bruna Amazonas and Anderson Uchôa},
